Added comment via GitHub

--- a/bundles/org.eclipse.orion.client.core/web/plugins/upperPlugin.html
+++ b/bundles/org.eclipse.orion.client.core/web/plugins/upperPlugin.html
@@ -16,6 +16,7 @@
 				img : "/images/gear.gif",
 				key : [ "u", true ]
 			};
+			//register the command with the editor
 			provider.registerServiceProvider("orion.edit.command", serviceImpl, serviceProps);
 			provider.connect();
 		};
